--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "node-sass": "^7.0.3",
+    "sass-loader": "^13.1.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vuetify": "^2.6.11"
